# danrt

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: main.cpp
src/util/: color.cpp  color.h  hittable.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.h
